[package]
name = "ghcl"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.5", features = ["cargo"] }
console = "0.15"
flate2 = "1.1"
futures = "0.3"
indicatif = "0.17"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
tokio = { version = "1.0", features = ["full"] }
